--- a/Task-2 CountDown-Timer/index.html
+++ b/Task-2 CountDown-Timer/index.html
@@ -18,7 +18,7 @@
     <header class="header bg-dark text-white">
         <h1>Countdown Timer</h1>
         <button class="toggle-btn btn btn-light" onclick="toggleDarkMode()">
-            <i class="fas fa-adjust" title="Toggle Dark Mode"></i>
+            <i class="fas fa-moon" title="Toggle Dark Mode"></i>
         </button>
     </header>
     <!-- countdown display -->
@@ -46,6 +46,10 @@
 
     <!-- event details -->
     <section class="event-details container mt-4">
+        <!-- Label for Event Name -->
+        <label for="eventNameInput">Event Name</label>
+        <input type="text" id="eventNameInput" class="form-control" placeholder="Enter Event Name">
+        <!-- Label for Event Date and Time -->
         <label for="dateInput">Event Date and Time</label>
         <input type="text" id="dateInput" class="form-control" placeholder="Select Event Date and Time"
             autocomplete="off">
